--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
+    "emailjs-com": "^3.2.0",
     "framer-motion": "^11.0.5",
     "jquery": "^3.7.1",
     "jquery-validation": "^1.20.0",
